# replivideo

./: .env.example  .gitignore  .replit  HEYGEN_SETUP.md  README.md  SETUP.md  main.py  pyproject.toml  replit.md  test_heygen_integration.py  videos_db.json
attached_assets/: Pasted--AI-Avatar-Video-Maker-Replit-Complete-Application-10-dakikal-k-GitHub-Web-analiz-videolar-olu-1760003512436_1760003512437.txt  Pasted-Error-while-parsing-the-sandbox-attribute-allow-downloads-without-user-activation-is-an-invalid-1760319566635_1760319566636.txt  Pasted-RepliVideo-1-Uncaught-in-promise-Error-A-listener-indicated-an-asynchronous-response-by-returning-1760038494912_1760038494913.txt  Pasted-The-source-list-for-the-Content-Security-Policy-directive-default-src-contains-an-invalid-source--1760323353992_1760323353992.txt  Pasted-attached-assets-screenshot-1760041270786-png-1-GET-https-replit-com-hikmet044-attached-assets-sc-1760041460151_1760041460151.txt  Pasted-attached-assets-screenshot-1760041270786-png-1-GET-https-replit-com-hikmet044-attached-assets-sc-1760048420982_1760048420983.txt  Pasted-attached-assets-screenshot-1760041270786-png-1-GET-https-replit-com-hikmet044-attached-assets-sc-1760049711306_1760049711307.txt  Pasted-index-iife-js-707-redi-You-are-loading-scripts-of-redi-more-than-once-This-may-cause-undesired-b-1760034516693_1760034516693.txt  Pasted-recaptcha-tr-js-482-The-source-list-for-the-Content-Security-Policy-directive-default-src-contain-1760039566009_1760039566009.txt  content-1760033467164.md  content-1760035316991.md  content-1760041269870.md  (+6 more)
(+9 files in other folders)
