[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.69.0",
    "beautifulsoup4>=4.14.2",
    "elevenlabs>=2.17.0",
    "fastapi>=0.118.2",
    "httpx>=0.28.1",
    "openai>=2.2.0",
    "pydantic>=2.12.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
]
